--- a/qcloudimage_php/composer.json
+++ b/qcloudimage_php/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+    },
     "autoload": {
         "psr-4": {
             "\\Qcloud\\image\\": "src/"
