--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "email": "715045421@qq.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "1.0",
     "require": {
     },
     "autoload": {
