--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
             "email": "715045421@qq.com"
         }
     ],
-    "minimum-stability": "1.0",
+    "minimum-stability": "dev",
     "require": {
+
     },
     "autoload": {
         "psr-4": {
